--- a/eurc/index.html
+++ b/eurc/index.html
@@ -304,7 +304,7 @@
     </div>
 
     <div>
-        <div class="count">7,365,856 AQUA</div>
+        <div class="count">♒︎ 7,365,856</div>
         <div class="description">AQUA Liquid Reserve</div>
     </div>
 
@@ -314,7 +314,7 @@
     </div>
 
     <div>
-        <div class="count">100,000,306 AQUA</div>
+        <div class="count">♒︎ 100,000,306</div>
         <div class="description">AQUA locked in ICE</div>
     </div>
 </div>
