--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -65,15 +65,17 @@
           </svg>
         </div>
 
-        <!-- Navigation Menu -->
-        <nav class="menu">
+        <!-- Navigation Menu Container (reverted to div as per original) -->
+        <div class="menu">
           <div class="relative">
-            <a href="https://mirrasets.com/" target="_self">Home</a>
-            <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
-            <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
-            <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
-            <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
-            <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
+            <nav>
+              <a href="https://mirrasets.com/" target="_self">Home</a>
+              <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
+              <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
+              <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
+              <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
+              <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
+            </nav>
           </div>
 
           <!-- Social Links -->
@@ -83,9 +85,11 @@
                 <path d="M15.6747 1.48975C15.0918 1.74239 14.4707 1.90986 13.8232 1.99117C14.4893 1.59816 14.9978 0.98058 15.2368 0.236191C14.6157 0.602093 13.9299 0.860548 13.1991 1.00478C12.6093 0.384294 11.7688 0 10.8518 0C9.07273 0 7.64046 1.42683 7.64046 3.17599C7.64046 3.42767 7.66201 3.66967 7.71491 3.90005C5.04335 3.77131 2.6794 2.50614 1.09135 0.578862C0.814107 1.05415 0.651481 1.59816 0.651481 2.1838C0.651481 3.28344 1.22459 4.25821 2.07886 4.82255C1.56258 4.81287 1.05609 4.66477 0.62699 4.43148C0.62699 4.44116 0.62699 4.45375 0.62699 4.46633C0.62699 6.00932 1.74088 7.29094 3.20157 7.58618C2.93999 7.65685 2.65491 7.69073 2.35905 7.69073C2.15332 7.69073 1.94563 7.67911 1.75067 7.63652C2.16703 8.89394 3.34852 9.81838 4.75337 9.84839C3.66005 10.6934 2.27186 11.2026 0.769042 11.2026C0.50551 11.2026 0.252755 11.191 0 11.1591C1.42346 12.0661 3.11046 12.5839 4.92971 12.5839C10.843 12.5839 14.0759 7.74397 14.0759 3.54867C14.0759 3.40831 14.071 3.27279 14.0642 3.13824C14.7019 2.69103 15.2378 2.13249 15.6747 1.48975Z" fill="#f0cb78"/>
               </svg>
             </a>
-            <div class="stay-in-touch">Stay in touch <div class="line"></div></div>
+            <div class="stay-in-touch">
+              Stay in touch <div class="line"></div>
+            </div>
           </div>
-        </nav>
+        </div>
       </header>
 
       <!-- Main Block -->
@@ -145,14 +149,14 @@
       <section class="wallets-and-exchanges centered-block">
         <div class="text wallets">
           <iframe
-            onLoad="var c=this; window.addEventListener('message',function({data,source}){if(c && source===c.contentWindow && data.widget===c.src)c.style.height=data.height+'px'}, false);"
+            onLoad="var c=this; window.addEventListener('message', function({data,source}) { if(c && source===c.contentWindow && data.widget===c.src) c.style.height=data.height+'px'; }, false);"
             src="https://stellar.expert/widget/public/asset/summary/GBPC-GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC"
             style="border:none; overflow:hidden; max-width:100%; min-width:300px; max-height:100%; min-height:477px; width:366px"
           ></iframe>
         </div>
         <div class="text exchanges">
           <iframe
-            onLoad="var c=this; window.addEventListener('message',function({data,source}){if(c && source===c.contentWindow && data.widget===c.src)c.style.height=data.height+'px'}, false);"
+            onLoad="var c=this; window.addEventListener('message', function({data,source}) { if(c && source===c.contentWindow && data.widget===c.src) c.style.height=data.height+'px'; }, false);"
             src="https://stellar.expert/widget/public/account/balances/GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC"
             style="border:none; overflow:hidden; max-width:100%; min-width:300px; max-height:100%; min-height:477px; width:366px"
           ></iframe>
@@ -186,7 +190,7 @@
               <div class="description">Liquid AQUA USD Value</div>
             </div>
             <div>
-              <div class="count">♒︎ 120,000,306</div>
+              <div class="count">♒︎ 214,500,000</div>
               <div class="description">AQUA locked in ICE</div>
             </div>
           </div>
@@ -198,7 +202,7 @@
         <div class="centered-block content">
           <div class="copyright-line">
             <div class="copyright">
-              © 2023 mirrasets.com
+              © 2025 mirrasets.com
             </div>
           </div>
         </div>
