--- a/gbpc/index.html
+++ b/gbpc/index.html
@@ -9,7 +9,7 @@
     <base href="" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://mirrasets.com/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://mirrasets.com/favicon.ico" />
     <link rel="canonical" href="/" />
 
     <!-- Open Graph / Social Meta -->
@@ -47,13 +47,10 @@
   </head>
   <body>
     <div class="main-content" id="main-content">
-      <!-- Header -->
+      <!-- Updated Header -->
       <header class="page-header">
-        <a class="main-link" href="/">
-          <img src="/icons/sauk-logo.png" alt="Mirrasets Logo" />
-        </a>
+        <a class="main-link" href="/"><img src="/icons/sauk-logo.png" alt="Mirrasets Logo" /></a>
 
-        <!-- Mobile Menu Toggle -->
         <div class="menu-toggle">
           <svg class="menu-icon" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2 1H15" stroke="#4a4a4a" />
@@ -65,34 +62,44 @@
           </svg>
         </div>
 
-        <!-- Navigation Menu Container (using a div as in the original) -->
         <div class="menu">
           <div class="relative">
             <nav>
-              <a href="https://mirrasets.com/" target="_self">Home</a>
-              <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
-              <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
-              <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
-              <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank">AQUA Voting</a>
-              <a href="https://aqua.network/rewards/" target="_blank">AQUA Rewards</a>
+              <a href="https://mirrasets.com/" target="_self" style="font-weight:bold;">Home</a>
+              <div class="dropdown">
+                <a href="#" class="dropdown-toggle">Our Mirrored Assets &#9662;</a>
+                <div class="dropdown-menu">
+                  <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
+                  <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
+                  <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
+                </div>
+              </div>
+              <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank" style="font-weight:bold;">AQUA Voting</a>
+              <a href="https://aqua.network/rewards/" target="_blank" style="font-weight:bold;">AQUA Rewards</a>
             </nav>
           </div>
 
-          <!-- Social Links -->
           <div class="social-links">
-            <a href="https://twitter.com/stellaranchoruk" target="_blank">
-              <svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M15.6747 1.48975C15.0918 1.74239 14.4707 1.90986 13.8232 1.99117C14.4893 1.59816 14.9978 0.98058 15.2368 0.236191C14.6157 0.602093 13.9299 0.860548 13.1991 1.00478C12.6093 0.384294 11.7688 0 10.8518 0C9.07273 0 7.64046 1.42683 7.64046 3.17599C7.64046 3.42767 7.66201 3.66967 7.71491 3.90005C5.04335 3.77131 2.6794 2.50614 1.09135 0.578862C0.814107 1.05415 0.651481 1.59816 0.651481 2.1838C0.651481 3.28344 1.22459 4.25821 2.07886 4.82255C1.56258 4.81287 1.05609 4.66477 0.62699 4.43148C0.62699 4.44116 0.62699 4.45375 0.62699 4.46633C0.62699 6.00932 1.74088 7.29094 3.20157 7.58618C2.93999 7.65685 2.65491 7.69073 2.35905 7.69073C2.15332 7.69073 1.94563 7.67911 1.75067 7.63652C2.16703 8.89394 3.34852 9.81838 4.75337 9.84839C3.66005 10.6934 2.27186 11.2026 0.769042 11.2026C0.50551 11.2026 0.252755 11.191 0 11.1591C1.42346 12.0661 3.11046 12.5839 4.92971 12.5839C10.843 12.5839 14.0759 7.74397 14.0759 3.54867C14.0759 3.40831 14.071 3.27279 14.0642 3.13824C14.7019 2.69103 15.2378 2.13249 15.6747 1.48975Z" fill="#f0cb78"/>
+            <a href="https://x.com/mirrasets" target="_blank">
+              <svg width="14" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.333 5.929L13.546 0H12.31L7.783 5.147 4.17 0H0l5.466 7.784L0 14h1.235l4.778-5.436L9.831 14H14M1.68.911h1.897l8.733 12.223h-1.897" fill="#f0cb78"/>
               </svg>
             </a>
-            <div class="stay-in-touch">
-              Stay in touch <div class="line"></div>
-            </div>
+            <a class="discord-link" href="https://discord.gg/DjBhVqmwup" target="_blank">
+              <svg width="18" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15.643 1.449S14.353.183 11.425 0v.4s1.606-.087 3.594 1.727C13.52 1.127 11.378.499 9 .499s-4.519.627-6.02 1.628C4.97.313 6.576.4 6.576.4V0C3.647.183 2.357 1.449 2.357 1.449.126 4.112 0 9.939 0 9.939c2.102 2.348 4.743 2.049 4.743 2.049l.97-1.299c-1.251-.314-2.145-1.034-2.682-1.594 1.498.98 3.618 1.594 5.969 1.594 2.351 0 4.47-.613 5.969-1.594-.537.56-1.43 1.28-2.682 1.594l.97 1.299s2.641.3 4.743-2.048c0 0-.126-5.828-2.357-8.491zM6.198 8.29A1.515 1.515 0 014.67 6.788c0-.83.683-1.504 1.527-1.504.843 0 1.527.673 1.527 1.504 0 .83-.684 1.503-1.527 1.503zm5.604 0a1.515 1.515 0 01-1.527-1.503c0-.83.684-1.504 1.527-1.504.844 0 1.527.673 1.527 1.504 0 .83-.683 1.503-1.527 1.503z" fill="#f0cb78"/>
+              </svg>
+            </a>
+            <a class="email-link" href="mailto:support@mirrasets.com">
+              <svg width="16" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.81 5.323l5.143 3.251v-6.64l-5.143 3.39zM.7 1.935v6.64l5.142-3.252L.7 1.935zM15 0H1.65a.942.942 0 00-.924.811l7.599 5.007L15.925.811A.942.942 0 0015 0zM9.944 5.894l-1.35.888a.476.476 0 01-.524 0l-1.349-.89L.735 9.68a.94.94 0 00.923.804h13.349a.94.94 0 00.923-.804L9.944 5.894z" fill="#f0cb78"/>
+              </svg>
+            </a>
           </div>
         </div>
       </header>
 
-      <!-- Main Block -->
+      <!-- Main Block for GBPC -->
       <section class="main-block-gbpc">
         <!-- Main content specific to GBPC can be placed here -->
       </section>
@@ -211,7 +218,7 @@
     <!-- External JavaScript -->
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="https://mirrasets.com/scripts/info.js"></script>
-    <!-- Inline script: Toggle "menu-opened" on header for mobile menu -->
+    <!-- Inline script: Toggle mobile menu -->
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         const menuToggle = document.querySelector('.menu-toggle');
