--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -99,53 +99,59 @@
         </div>
       </header>
 
-      <!-- Main Block for EURC -->
-      <section class="main-block-eurc">
-        <!-- (Optional) Additional EURC-specific banner or hero content can go here -->
+      <!-- Main Block for KRWC -->
+      <section class="main-block-krwc">
+        <!-- (Optional) KRWC-specific banner or hero content can go here -->
       </section>
 
       <!-- Wallets and Exchanges Section -->
       <section class="wallets-and-exchanges centered-block">
         <div class="text wallets">
-          <h4>What is EURC?</h4>
+          <h4>What is KRWC?</h4>
           <p>
-            EURC is a mirror representation of the Euro on the Stellar network.
-            Using the Stellar DEX, we keep EURC pegged to the same value as the current market rates of real world EUR &amp; USD.
+            KRWC is a mirror representation of the South Korean Won on the Stellar network.
+            Using the Stellar DEX, we keep KRWC pegged to the same value as the current market rates of real world KRW &amp; USD.
           </p>
+          <p><br /></p>
           <p>
-            Users of EURC can redeem their tokens for USDC anytime through the Stellar DEX.
-            USDC used to purchase EURC are placed back into buy orders or EURC AMMs, ensuring sufficient USDC reserves for repurchase.
+            Users of KRWC can redeem their tokens for USDC anytime through the Stellar DEX.
+            USDC used to purchase KRWC are placed back into buy orders of KRWC or the KRWC AMMs, ensuring sufficient USDC reserves for repurchase.
             A minimum spread of 1.25% is set by the issuing wallet on buy &amp; sell offers, updated regularly to reflect market prices.
           </p>
+          <p><br /></p>
           <p>
-            We mainly support the EURC/USDC market to ensure EURC remains stable and fully redeemable on the SDEX.
+            We mainly support the KRWC/USDC market to ensure users can always sell KRWC back to USDC, which ensures that KRWC stays stable and redeemable on the SDEX.
           </p>
         </div>
-
         <div class="text exchanges">
           <h4>Supply</h4>
           <p>
-            We maintain the EURC buyback ability above the circulating supply.
-            Check the USDC balance of our issuing wallet to verify.
+            We ensure to always keep the KRWC buyback ability above the circulating KRWC.
+            You can check for yourself by seeing how much USDC our issuing wallet holds.
           </p>
+          <p><br /></p>
           <p>
-            Issuing wallet: 
-            <a href="https://stellar.expert/explorer/public/account/GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC" target="_blank">
-              GAP2......EURC
+            Issuing wallet -
+            <a href="https://stellar.expert/explorer/public/account/GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC" target="_blank">
+              GA4J......KRWC
             </a>
           </p>
+          <p><br /></p>
           <p>
-            We also collect AQUA when participating in 
+            We also collect AQUA when we participate in
             <a href="http://aqua.network/rewards" target="_blank">AQUA rewards</a>.
             AQUA is used to 
-            <a href="https://vote.aqua.network/?sort=top" target="_blank">vote for further AQUA rewards</a>
-            for EURC markets, or partially sold to maintain USDC reserves. In surplus, we may purchase AQUA tokens to boost votes for EURC pairs.
+            <a href="https://vote.aqua.network/?sort=top" target="_blank">vote for AQUA rewards</a>
+            for KRWC markets, or can be partially sold to ensure USDC reserves allow us to keep our buyback ability above the circulating KRWC.
+            When USDC reserves are in surplus, we sometimes buy AQUA tokens to increase votes for KRWC pairs.
           </p>
+          <p><br /></p>
           <p>
-            To view the current circulating EURC supply, 
-            <a href="https://stellar.expert/explorer/public/asset/EURC-GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC" target="_blank">
+            To find out the current circulating KRWC supply,
+            <a href="https://stellar.expert/explorer/public/asset/KRWC-GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC" target="_blank">
               click here
-            </a> and check the "Total supply" figure.
+            </a>
+            and look for the figure next to "Total supply".
           </p>
         </div>
       </section>
@@ -155,14 +161,14 @@
         <div class="text wallets">
           <iframe
             onLoad="var c=this; window.addEventListener('message', function({data, source}) { if(c && source===c.contentWindow && data.widget===c.src) c.style.height=data.height+'px'; }, false);"
-            src="https://stellar.expert/widget/public/asset/summary/EURC-GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC"
+            src="https://stellar.expert/widget/public/asset/summary/KRWC-GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC"
             style="border:none; overflow:hidden; max-width:100%; min-width:300px; max-height:100%; min-height:477px; width:366px"
           ></iframe>
         </div>
         <div class="text exchanges">
           <iframe
             onLoad="var c=this; window.addEventListener('message', function({data, source}) { if(c && source===c.contentWindow && data.widget===c.src) c.style.height=data.height+'px'; }, false);"
-            src="https://stellar.expert/widget/public/account/balances/GAP2JFYUBSSY65FIFUN3NTUKP6MQQ52QETQEBDM25PFMQE2EEN2EEURC"
+            src="https://stellar.expert/widget/public/account/balances/GA4JBPWVFUT2FETDSMSGBYDGH4FROYB5SYKLVQO7WGNZHCSB63OIKRWC"
             style="border:none; overflow:hidden; max-width:100%; min-width:300px; max-height:100%; min-height:477px; width:366px"
           ></iframe>
         </div>
@@ -171,19 +177,19 @@
       <!-- Current Stats Section -->
       <section class="current-stats">
         <div class="centered-block">
-          <div class="title">EURC Stats</div>
+          <div class="title">KRWC Stats</div>
           <div class="date">May 8, 2024</div>
           <div class="table">
             <div>
-              <div class="count">€81</div>
-              <div class="description">Circulating EURC</div>
+              <div class="count">₩29,705,309</div>
+              <div class="description">Circulating KRWC</div>
             </div>
             <div>
-              <div class="count">€3,032</div>
-              <div class="description">EURC Buyback Ability</div>
+              <div class="count">₩38,545,038</div>
+              <div class="description">KRWC Buyback Ability</div>
             </div>
             <div>
-              <div class="count">$3,243</div>
+              <div class="count">$28,095</div>
               <div class="description">USD Reserves</div>
             </div>
             <div>
