--- a/proposal-106/index.html
+++ b/proposal-106/index.html
@@ -46,17 +46,39 @@
     }
 
     async function fetchTrustlines(marketKey) {
-      const res = await fetch(HORIZON_BASE + marketKey);
-      const data = await res.json();
-      const nonNative = data.balances.filter(b => b.asset_type !== 'native');
-      return nonNative.map(b => b.asset_code);
+      try {
+        const res = await fetch(HORIZON_BASE + marketKey);
+        const data = await res.json();
+        const balances = data.balances;
+        const hasNative = balances.some(b => b.asset_type === 'native');
+        const nonNative = balances
+          .filter(b => b.asset_type !== 'native')
+          .map(b => b.asset_code);
+        // Determine market assets
+        let assets = [];
+        if (nonNative.length >= 2) {
+          assets = nonNative;
+        } else if (nonNative.length === 1 && hasNative) {
+          assets = [nonNative[0], 'XLM'];
+        } else if (nonNative.length === 2 && !hasNative) {
+          assets = nonNative;
+        } else if (hasNative && nonNative.length === 0) {
+          assets = ['XLM'];
+        } else {
+          // fallback: list all codes
+          assets = nonNative.concat(hasNative ? ['XLM'] : []);
+        }
+        return assets;
+      } catch (err) {
+        console.error(`Error loading trustlines for ${marketKey}:`, err);
+        return ['XLM'];
+      }
     }
 
     function calculateStaticBoost(assets) {
       let boost = 1;
       if (assets.includes('AQUA')) boost += 0.5;
-      if (assets.includes('XLM')) boost += 0.3;
-      if (assets.includes('USDC')) boost += 0.3;
+      if (assets.includes('XLM') || assets.includes('USDC')) boost += 0.3 * (assets.includes('XLM') + assets.includes('USDC'));
       return boost;
     }
 
@@ -66,29 +88,28 @@
 
     function createRow(item) {
       const tr = document.createElement('tr');
-      const market = document.createElement('td'); market.textContent = item.market;
-      const votes = document.createElement('td'); votes.textContent = item.votes.toFixed(2);
-      const staticAdj = document.createElement('td'); staticAdj.textContent = item.staticBoostedVotes.toFixed(2);
-      const bribeTd = document.createElement('td');
-      const input = document.createElement('input'); input.type = 'number'; input.value = 0; input.min = 0;
-      bribeTd.appendChild(input);
-      const dynBoostTd = document.createElement('td'); dynBoostTd.textContent = item.staticBoost.toFixed(2);
-      const dampenedTd = document.createElement('td'); dampenedTd.textContent = item.staticBoostedVotes.toFixed(2);
-      const shareTd = document.createElement('td'); shareTd.textContent = '0%';
-      tr.append(market, votes, staticAdj, bribeTd, dynBoostTd, dampenedTd, shareTd);
+      tr.innerHTML = `
+        <td>${item.market}</td>
+        <td>${item.votes.toFixed(2)}</td>
+        <td>${item.staticBoostedVotes.toFixed(2)}</td>
+        <td><input type="number" value="0" min="0" /></td>
+        <td>${item.staticBoost.toFixed(2)}</td>
+        <td>${item.staticBoostedVotes.toFixed(2)}</td>
+        <td>0%</td>
+      `;
+      const input = tr.querySelector('input');
+      const dynBoostCell = tr.cells[4];
+      const dampenedCell = tr.cells[5];
 
       input.addEventListener('input', () => {
         const bribe = parseFloat(input.value) || 0;
-        let dynBoost;
+        let dynBoost = item.staticBoost;
         if (item.staticBoost === 1.3 || item.staticBoost === 1.5) {
-          const maxBoost = item.staticBoost - 1;
-          dynBoost = calculateDynamicBoost(bribe, maxBoost);
-        } else {
-          dynBoost = item.staticBoost;
+          dynBoost = calculateDynamicBoost(bribe, item.staticBoost - 1);
         }
-        dynBoostTd.textContent = dynBoost.toFixed(2);
-        const dampenedVotes = item.votes * dynBoost;
-        dampenedTd.textContent = dampenedVotes.toFixed(2);
+        dynBoostCell.textContent = dynBoost.toFixed(2);
+        const dampened = item.votes * dynBoost;
+        dampenedCell.textContent = dampened.toFixed(2);
         updateShares();
       });
 
@@ -97,27 +118,25 @@
 
     function updateShares() {
       const rows = Array.from(document.querySelectorAll('#votesTable tbody tr'));
-      const dampenedVotesArr = rows.map(row => parseFloat(row.cells[5].textContent));
-      const total = dampenedVotesArr.reduce((a, b) => a + b, 0);
-      rows.forEach((row, i) => {
-        const share = (dampenedVotesArr[i] / total) * 100;
-        row.cells[6].textContent = share.toFixed(2) + '%';
+      const values = rows.map(r => parseFloat(r.cells[5].textContent));
+      const total = values.reduce((sum, v) => sum + v, 0) || 1;
+      rows.forEach((r, i) => {
+        r.cells[6].textContent = ((values[i] / total) * 100).toFixed(2) + '%';
       });
     }
 
     async function init() {
       const markets = await fetchAllMarkets();
-      const items = [];
+      const tbody = document.querySelector('#votesTable tbody');
       for (let m of markets) {
         const assets = await fetchTrustlines(m.market_key);
-        const marketName = assets.length > 1 ? assets.join(' / ') : assets[0] + ' / XLM';
+        const marketName = assets.join(' / ');
         const votes = parseFloat(m.votes_value);
-        const staticBoost = calculateStaticBoost(assets.length ? assets : ['XLM']);
+        const staticBoost = calculateStaticBoost(assets);
         const staticBoostedVotes = votes * staticBoost;
-        items.push({ market: marketName, votes, staticBoost, staticBoostedVotes });
+        const item = { market: marketName, votes, staticBoost, staticBoostedVotes };
+        tbody.appendChild(createRow(item));
       }
-      const tbody = document.querySelector('#votesTable tbody');
-      items.forEach(item => tbody.appendChild(createRow(item)));
       updateShares();
     }
 
